Fixed whitespace issues

--- a/app/tours-component/_tours.scss
+++ b/app/tours-component/_tours.scss
@@ -18,7 +18,7 @@
 
       .title {
         position: absolute;
-        bottom: 33px;
+        bottom: 32px;
         @include image-overlay();
         padding: 1em;
         width: 100%;
